--- a/src/components/cards/checkCard/CheckCard.module.scss
+++ b/src/components/cards/checkCard/CheckCard.module.scss
@@ -2,24 +2,34 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap:20px
+  gap:20px;
+  max-width: 430px;
+  width: 100%;
 }
 
 .reversed{
   flex-direction: row-reverse;
 }
-
+.reversedText{
+  align-items: flex-start;
+}
 .content{
   display: flex;
   flex-direction: column;
   gap:9px;
+  align-items: flex-end;
 }
+
+
+
 .title{
+  width: 100%;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
   line-height: 129.7%;
   color: var(--white);
+
 }
 
 
@@ -28,10 +38,38 @@
   font-weight: 400;
   font-size: 17px;
   line-height: 125%;
-  /* or 21px */
-
-  text-align: right;
 
   color: var(--white);
 
+}
+
+.textLeft{
+  text-align: left;
+}
+
+.textRight{
+  text-align: right;
+}
+
+
+.row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+
+
+.first{
+  max-width: 1048px;
+
+}
+.second{
+  max-width: 1116px;
+}
+.third{
+  max-width: 816px;
 }
