--- a/src/components/problems/Problems.module.scss
+++ b/src/components/problems/Problems.module.scss
@@ -31,4 +31,20 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+
+
+.first{
+  max-width: 1048px;
+
+}
+.second{
+  max-width: 1116px;
+}
+.third{
+  max-width: 816px;
 }
