--- a/src/components/Header/call/Call.module.scss
+++ b/src/components/Header/call/Call.module.scss
@@ -27,6 +27,7 @@
   line-height: 113.7%;
   text-align: right;
   color: var(--gray-title);
+  white-space: nowrap;
 }
 .black{
   color: var(--gray-title);
