--- a/src/components/Header/wait/Wait.module.scss
+++ b/src/components/Header/wait/Wait.module.scss
@@ -19,3 +19,11 @@
   line-height: 125%;
   color:var(--gray-title);
 }
+
+
+
+@media screen and (max-width: 1070px){
+  .indicator{
+    display: none;
+  }
+}
