--- a/src/components/Main/servicesAndPrices/ServicesAndPrices.module.scss
+++ b/src/components/Main/servicesAndPrices/ServicesAndPrices.module.scss
@@ -24,7 +24,8 @@
   font-size: 40px;
   line-height: 125%;
   text-align: center;
-  color:var(--gray-title)
+  color:var(--gray-title);
+  margin-bottom: 70px;
 }
 
 .keys{
