--- a/src/components/Footer/menu/Menu.module.scss
+++ b/src/components/Footer/menu/Menu.module.scss
@@ -2,15 +2,17 @@
   max-width: 334px;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 9px 14px;
-  gap:12px;
+  justify-content: space-between;
 }
 
-.row{
+.col{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  //justify-content: space-between;
+  gap:12px;
+
 }
 
 .link{
@@ -23,4 +25,19 @@
   &:hover{
     color: var(--white);
   }
+}
+
+@media screen and (max-width: 1070px){
+  .fullMenu{
+    flex-direction: column;
+    padding-left: 0;
+    padding-bottom: 0;
+  }
+  .col{
+    gap: 30px;
+    &:first-child{
+      margin-bottom: 30px;
+    }
+  }
+
 }
