--- a/src/components/FormBlock/FromBlock.module.scss
+++ b/src/components/FormBlock/FromBlock.module.scss
@@ -1,3 +1,21 @@
+.title{
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 125%;
+  text-align: center;
+
+  color: #FFFFFF;
+  margin-bottom: 30px;
+}
+
+.wrapper{
+  max-width: 820px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+
 .modal{
   z-index: 10;
   position: relative;
@@ -7,7 +25,7 @@
   align-items: center;
   //background: rgba(119, 119, 119, 0.01);
   //opacity: 0.95;
-  border: 1px solid rgba(255, 255, 255, 0.51);
+  //border: 1px solid rgba(255, 255, 255, 0.51);
   box-sizing: border-box;
   //backdrop-filter: blur(150px);
 
@@ -15,15 +33,11 @@
 }
 
 
-.title{
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 125%;
-  color: var(--white);
-  margin-bottom: 17px;
-  text-align: center;
+.padding{
+  padding: 100px 30px;
 }
+
+
 
 
 .subtitle{
