--- a/src/components/Main/Check/Check.module.scss
+++ b/src/components/Main/Check/Check.module.scss
@@ -4,11 +4,15 @@
   z-index: 5;
 }
 .img{
-  z-index: -2;
   width: 100%;
-  position: absolute;
-  top: 0; left: 0; right: 0;
   height: 100%;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
 }
 
 .car{
