--- a/src/components/Main/Questions/Questions.module.scss
+++ b/src/components/Main/Questions/Questions.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   gap: 20px;
   background: black;
   position: relative;
@@ -61,4 +62,10 @@
   right: 0;
   bottom: 0;
   margin: auto;
+}
+
+
+.secondStepWrapper{
+  max-width: 446px;
+  width: 100%;
 }
