--- a/src/components/Modal/SuccessUpload/SuccessUpload.module.scss
+++ b/src/components/Modal/SuccessUpload/SuccessUpload.module.scss
@@ -5,11 +5,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  //background: rgba(119, 119, 119, 0.01);
-  //opacity: 0.95;
+  background: rgba(119, 119, 119, 0.01);
+  opacity: 0.95;
   border: 1px solid rgba(255, 255, 255, 0.51);
   box-sizing: border-box;
-  //backdrop-filter: blur(150px);
+  backdrop-filter: blur(150px);
 
   border-radius: 11px;
 }
