--- a/src/components/UI/Forms/Form.module.scss
+++ b/src/components/UI/Forms/Form.module.scss
@@ -56,7 +56,7 @@
 .btn{
   min-height: 60px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 600!important;
   font-size: 18px;
   line-height: 140%;
   /* or 25px */
@@ -69,4 +69,34 @@
 
 .underline{
   text-decoration: underline;
+}
+
+
+
+.error{
+  color: red;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.rowInputs{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  >div{
+    width: 100%;
+  }
+}
+
+.formWrapper{
+
+  background: rgba(119, 119, 119, 0.01);
+  padding:25px 30px 35px;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-sizing: border-box;
+  border-radius: 11px;
 }
