--- a/src/components/blogArticles/BlogArticles.module.scss
+++ b/src/components/blogArticles/BlogArticles.module.scss
@@ -4,7 +4,8 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap:70px
+  gap:70px;
+  padding-bottom: 30px;
 }
 
 .container{
@@ -13,5 +14,4 @@
   justify-content: space-between;
   gap:20px;
   flex-wrap: wrap;
-
 }
