--- a/src/pages/404/NotFound.module.scss
+++ b/src/pages/404/NotFound.module.scss
@@ -1,10 +1,5 @@
 .main{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+
 }
 
 .img{
@@ -14,15 +9,16 @@
 
 
 .btn{
+  z-index: 10;
+  padding: 15px 80px;
   outline:none;
   position: absolute;
   top: 70%;
   left: 50%;
   transform: translateX(-50%);
   width: auto;
-  padding: 3px 20px;
+  cursor: pointer;
   white-space: nowrap;
-  z-index: 10;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
