--- a/src/components/cards/priceCard/PriceCard.module.scss
+++ b/src/components/cards/priceCard/PriceCard.module.scss
@@ -120,7 +120,7 @@
   font-size: 15px;
   line-height: 113%;
   /* or 17px */
-
+  cursor: pointer;
   display: flex;
   align-items: center;
   text-align: center;
