--- a/src/components/About/mainAbout/MainAbout.module.scss
+++ b/src/components/About/mainAbout/MainAbout.module.scss
@@ -1,7 +1,23 @@
 .wrapper{
   display: flex;
   width: 100%;
+  position: relative;
 }
+
+.spare1{
+  position: absolute;
+  top: 0;
+  left:0;
+  z-index: 3;
+}
+
+.spare2{
+  position: absolute;
+  bottom: 0;
+  right:0;
+  z-index: 3;
+}
+
 
 .container{
   max-width: 1100px;
