--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,6 +10,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .gray {
@@ -59,7 +60,6 @@
   .headerMobile {
     display: block;
     padding-top: 15px;
-
     .container {
       width: 100%;
       padding: 0 15px;
@@ -104,14 +104,29 @@
     }
 
   }
+  .headerWrapper{
+    z-index: -100;
+    min-height: 100vh;
+    min-width: 100%;
+    position: fixed;
+    background: white;
+    top: 62px;
+    opacity: 0;
+    overflow-y: hidden;
+    transition: opacity 0.3s ease-in-out;
+    bottom: 0;
+    right: 0;
+    left: 0;
+  }
+
   .menuTransition{
-    //position: relative;
-    //top:-600px;
-    transform: translateY(-115%);
-    transition: transform 0.3s ease-in-out;
+    width: calc(100% - 30px);
+    margin: 0 auto;
+
   }
   .animate{
-    transform: translateY(0%);
+    opacity: 1;
+    z-index: 100;
   }
   .addressWait{
     display: flex;
