--- a/src/components/cards/priceCard/PriceCard.module.scss
+++ b/src/components/cards/priceCard/PriceCard.module.scss
@@ -128,3 +128,32 @@
   color: var(--gray-secondary);
   margin-bottom: 41px;
 }
+
+
+//@media screen and (max-width: 576px){
+//  .card{
+//    min-width: 156px;
+//    max-width: 156px;
+//  }
+//
+//  .price{
+//    width: 100%;
+//    font-size: 16px;
+//  }
+//
+//  .priceNumber{
+//    font-size: 25px;
+//  }
+//
+//  .button{
+//    font-style: normal;
+//    font-weight: 500;
+//    font-size: 14px;
+//    line-height: 113%;
+//    display: flex;
+//    align-items: center;
+//    text-align: center;
+//    text-transform: uppercase;
+//    color: #121212;
+//  }
+//}
