--- a/src/components/AutoPodbor/AutoPodbor.module.scss
+++ b/src/components/AutoPodbor/AutoPodbor.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   position: relative;
   z-index: 3;
+  overflow-x: hidden;
 }
 
 
@@ -113,4 +114,23 @@
   right: 0;
   top: 200px;
   z-index: 0;
+}
+
+
+
+@media screen and (max-width: 768px){
+  .img{
+    top: -180px;
+  }
+  .box{
+    padding: 20px;
+  }
+  .btn{
+    width: 100%;
+    padding: 0;
+    min-height: 60px;
+  }
+  .imgBackground{
+    margin: auto;
+  }
 }
