--- a/src/components/Main/Check/Check.module.scss
+++ b/src/components/Main/Check/Check.module.scss
@@ -1,9 +1,10 @@
-.black{
+.black {
   background: black;
   position: relative;
   z-index: 5;
 }
-.img{
+
+.img {
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -12,16 +13,20 @@
   left: 0;
   right: 0;
   bottom: 0;
-
 }
 
-.car{
+.car {
   z-index: -1;
   margin: auto;
   position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  //width: 100%;
 }
-.wrapper{
+
+.wrapper {
   margin: 0 auto;
   max-width: 1410px;
   padding: 100px 15px 0;
@@ -30,7 +35,7 @@
   flex-direction: column;
 }
 
-.content{
+.content {
 
   display: flex;
   flex-direction: column;
@@ -40,7 +45,7 @@
 }
 
 
-.title{
+.title {
 
   flex: 1 0 auto;
   font-style: normal;
@@ -48,12 +53,12 @@
   font-size: 40px;
   line-height: 125%;
   text-align: center;
-  color:var(--white);
+  color: var(--white);
   margin-bottom: 90px;
 }
 
 
-.row{
+.row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -63,14 +68,49 @@
 }
 
 
-
-.first{
+.first {
   max-width: 1226px;
 
 }
-.second{
+
+.second {
   max-width: 1286px;
 }
-.third{
+
+.third {
   max-width: 1312px;
+}
+
+.desktop{
+  display: block;
+}
+.mobile{
+  display: none;
+
+}
+
+.column{
+  display: flex;
+  flex-direction: column;
+  gap:30px;
+  padding: 0 15px;
+}
+
+
+@media screen and (max-width: 990px) {
+  //.title{
+  //  margin-bottom: 30px;
+  //}
+  .carMobile{
+    width: 100%;
+  }
+  .desktop{
+    display: none;
+  }
+  .mobile{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
