--- a/src/components/Main/choice/Choice.module.scss
+++ b/src/components/Main/choice/Choice.module.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   gap: 38px;
   position: relative;
+  overflow-x: hidden;
 }
 
 .content{
@@ -29,7 +30,8 @@
 
 .pink{
   position: absolute;
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   height: 700px;
   background: #FAF6F3;
   filter: blur(170px);
@@ -40,7 +42,8 @@
 
 .blue{
   position: absolute;
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   height: 700px;
   background: #F4F6F5;
   filter: blur(170px);
@@ -48,4 +51,12 @@
   border-radius: 50%;
   right:-400px;
   bottom:10px;
+}
+
+@media screen and (max-width: 768px){
+  .content{
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
 }
