--- a/src/components/Main/garantier/Garantier.module.scss
+++ b/src/components/Main/garantier/Garantier.module.scss
@@ -9,9 +9,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  gap:70px;
 }
 
 .card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: rgba(119, 119, 119, 0.01);
   padding: 67px 25px 100px;
   //opacity: 0.7;
@@ -112,6 +118,23 @@
   z-index: 0;
   position: absolute;
   bottom: -70px;
-  left: -32px;
-  right: 0;
+  width: 110%;
+
+}
+@media screen and (max-width: 768px){
+  .content{
+    flex-direction: column;
+    gap: 100px;
+  }
+  .letter{
+    width: 110%;
+  }
+  .card{
+    //max-width: 98%;
+    width: 100%;
+    background: url('../../../assets/images/garant/garan.png') no-repeat;
+    background-size: contain;
+    background-position: center center;
+  }
+
 }
