--- a/src/components/Main/problems/Problems.module.scss
+++ b/src/components/Main/problems/Problems.module.scss
@@ -42,7 +42,6 @@
 
 .first{
   max-width: 1048px;
-
 }
 .second{
   max-width: 1116px;
@@ -57,4 +56,23 @@
   margin: auto;
   position: absolute;
   top: 0; left: -95px; bottom: 0; right: 0;
+
+}
+
+
+@media screen and (max-width: 768px){
+  .row{
+    flex-direction: column;
+    gap:20px;
+  }
+  .title{
+    margin-bottom: -30px;
+  }
+  .men{
+    position: static;
+    margin: 0;
+  }
+  .content{
+   gap: 20px;
+  }
 }
