--- a/src/components/Main/servicesAndPrices/ServicesAndPrices.module.scss
+++ b/src/components/Main/servicesAndPrices/ServicesAndPrices.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 38px;
+  overflow-x: hidden;
 }
 
 .content{
@@ -76,4 +77,13 @@
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+@media screen and (max-width: 768px){
+  .glasses,.key{
+    display: none;
+  }
+  .blue{
+    margin-left: 0;
+  }
 }
