--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -111,6 +111,9 @@
 }
 
 
+
+
+
 .simpleText{
   font-style: normal;
   font-weight: 400;
@@ -129,4 +132,16 @@
   text-align: center;
   text-decoration-line: underline;
   color: #FFFFFF;
+}
+
+
+@media screen and (max-width: 768px){
+  .modal{
+    padding: 20px;
+    width: 100%;
+    align-items: start;
+  }
+  .title{
+    text-align: left;
+  }
 }
