--- a/src/components/Modal/SuccessUpload/SuccessUpload.module.scss
+++ b/src/components/Modal/SuccessUpload/SuccessUpload.module.scss
@@ -44,8 +44,6 @@
   background: linear-gradient(180deg, #FCC026 0%, #FC8B26 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
   margin-bottom: 35px;
 }
 
@@ -129,4 +127,11 @@
   text-align: center;
   text-decoration-line: underline;
   color: #FFFFFF;
+}
+
+
+@media screen and (max-width: 768px){
+  .modal{
+    padding-top:70px;
+  }
 }
