--- a/src/components/UI/Forms/Form.module.scss
+++ b/src/components/UI/Forms/Form.module.scss
@@ -100,3 +100,9 @@
   box-sizing: border-box;
   border-radius: 11px;
 }
+
+@media screen and (max-width: 768px){
+  .rowInputs{
+    flex-direction: column;
+  }
+}
