--- a/src/components/UI/pagination/Pagination.module.scss
+++ b/src/components/UI/pagination/Pagination.module.scss
@@ -3,3 +3,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 768px){
+  .wrapper{
+    max-width: 100%;
+  }
+}
