--- a/src/components/cards/checkCard/CheckCard.module.scss
+++ b/src/components/cards/checkCard/CheckCard.module.scss
@@ -73,3 +73,13 @@
 .third{
   max-width: 816px;
 }
+
+@media screen and (max-width: 990px){
+    .content{
+      min-width: 67%;
+    }
+
+  .img{
+    max-width: 33%;
+  }
+}
