--- a/src/pages/404/NotFound.module.scss
+++ b/src/pages/404/NotFound.module.scss
@@ -3,8 +3,12 @@
 }
 
 .img{
-  min-width: 100%;
-  min-height: 100%;
+  //min-width: 100%;
+  //min-height: 100%;
+  width: 100%;
+  //height: 100%;
+  min-height: 100vh;
+  object-fit: cover;
 }
 
 
