--- a/src/components/blogArticles/BlogArticles.module.scss
+++ b/src/components/blogArticles/BlogArticles.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap:20px;
+  row-gap:20px;
   flex-wrap: wrap;
   margin: 0 auto;
 }
