slider + other fix without wave

--- a/src/components/Main/feedback/Feedback.module.scss
+++ b/src/components/Main/feedback/Feedback.module.scss
@@ -1,6 +1,7 @@
 .bck{
   width: 100%;
   background: black;
+  padding:100px 0;
 }
 
 .title{
@@ -9,13 +10,15 @@
   font-size: 40px;
   line-height: 125%;
   color: var(--white);
+  text-align: center;
+  margin-bottom: 68px;
 }
 
 .container{
   max-width: 1365px;
-  padding:0 15px;
+  padding:0 15px ;
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 100px;
 }
 
 .social{
@@ -51,4 +54,50 @@
   width: 300px;
   height: 300px;
   background: red;
+}
+
+.btnWrapper{
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn{
+  background: linear-gradient(180deg, #FCC026 0%, #FC8B26 100%);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 30px;
+  min-height: 50px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 113%;
+  /* or 17px */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  padding:0 10px;
+  color: #121212;
+}
+
+@media screen  and (max-width: 800px){
+  .social{
+    flex-direction: column;
+    gap:30px;
+
+  }
+  .container{
+    margin-bottom: 40px;
+  }
+}
+
+@media screen  and (max-width: 576px){
+  .social{
+    align-items: flex-start;
+  }
+  .container{
+    margin-bottom: 40px;
+  }
 }
