waves fix connect service && faq api

--- a/src/components/Main/Questions/Questions.module.scss
+++ b/src/components/Main/Questions/Questions.module.scss
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
   max-width: 1150px;
   width: 100%;
   margin: 0 auto;
@@ -14,7 +14,7 @@
 }
 
 
-.quizTitle{
+.quizTitle {
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -23,7 +23,7 @@
 }
 
 
-.quizBlock{
+.quizBlock {
   max-width: 680px;
   width: 100%;
   display: flex;
@@ -32,22 +32,21 @@
   flex: 1;
 }
 
-.accordionContainer{
+.accordionContainer {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   justify-content: space-between;
-  gap:20px;
+  gap: 20px;
 }
 
-.test{
+.test {
   background: red;
 }
 
 
-
-.orangeSquare{
+.orangeSquare {
   z-index: -1;
   position: absolute;
   top: 0;
@@ -56,7 +55,7 @@
   bottom: 0;
 }
 
-.bcg{
+.bcg {
   z-index: -1;
   position: absolute;
   top: 0;
@@ -67,21 +66,24 @@
 }
 
 
-.secondStepWrapper{
+.secondStepWrapper {
   max-width: 446px;
   width: 100%;
 }
 
+.accordionItem {
+  border-radius: 0.25rem;
+}
 
 @media screen and (max-width: 768px) {
-  .wrapper{
+  .wrapper {
     flex-direction: column;
   }
 
-  .quizTitle{
+  .quizTitle {
     text-align: center;
   }
-  .accordionContainer{
+  .accordionContainer {
     gap: 20px;
   }
 }
