--- a/src/components/AutoPodbor/AutoPodbor.module.scss
+++ b/src/components/AutoPodbor/AutoPodbor.module.scss
@@ -1,11 +1,10 @@
 .wrapper{
   max-width: 1410px;
-  padding: 0 15px;
+  padding: 0 15px 100px;
   margin: 0 auto;
   width: 100%;
   position: relative;
   z-index: 3;
-  overflow-x: hidden;
 }
 
 
@@ -109,11 +108,13 @@
 }
 
 .imgBackground{
+  margin: auto;
   position: absolute;
   left: 0;
   right: 0;
-  top: 200px;
+  top:20%;
   z-index: 0;
+  width: 100%;
 }
 
 
