--- a/src/components/Main/feedback/Feedback.module.scss
+++ b/src/components/Main/feedback/Feedback.module.scss
@@ -82,7 +82,33 @@
   color: #121212;
 }
 
+
+.review{
+  cursor: pointer;
+}
+
+.phoneButton{
+  position: relative;
+  .link{
+    position: absolute;
+    bottom: 10%;
+    left:13%
+  }
+}
+
+.mapWrapper{
+  position: relative;
+  overflow-x: hidden;
+}
+.map{
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
 @media screen  and (max-width: 800px){
+  .map{
+    display: none;
+  }
   .social{
     flex-direction: column;
     gap:30px;
