--- a/src/components/blogMain/BlogMain.module.scss
+++ b/src/components/blogMain/BlogMain.module.scss
@@ -13,10 +13,11 @@
 
 
 .wheels{
+  display: none;
   z-index: 10;
   position: absolute;
   bottom: -25%;
-  right: -25%;
+  margin-left: 79%;
 }
 .content{
   max-width: 620px;
