animation && waves fix

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -91,6 +91,7 @@
             }
 
             .link {
+              cursor: pointer;
               font-style: normal;
               font-weight: 500;
               font-size: 15px;
