--- a/src/components/Header/navigation/Navigation.module.scss
+++ b/src/components/Header/navigation/Navigation.module.scss
@@ -15,13 +15,15 @@
 }
 
 .item{
-  &>a{
+
+  &>a,span{
     color:var(--gray-secondary);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 113.7%;
     text-transform: uppercase;
+    cursor: pointer;
     &:hover{
       color:var(--gray-secondary);
       text-decoration: underline;
