--- a/src/components/Main/feedback/Feedback.module.scss
+++ b/src/components/Main/feedback/Feedback.module.scss
@@ -48,6 +48,7 @@
 
 .underline{
   text-decoration: underline;
+  color: white;
 }
 
 .red{
@@ -86,7 +87,13 @@
 .review{
   cursor: pointer;
 }
-
+.sliderWrapper{
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 .phoneButton{
   position: relative;
   .link{
@@ -98,7 +105,7 @@
 
 .mapWrapper{
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .map{
   margin: auto;
