--- a/src/components/Main/promo/Promo.module.scss
+++ b/src/components/Main/promo/Promo.module.scss
@@ -172,6 +172,7 @@
     padding: 0 15px;
     margin-top: -100px;
     z-index: 100;
+    margin-bottom: 90px;
   }
   .moneyBlock{
     margin-bottom: 0;
