--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -64,6 +64,7 @@
 
 @media screen and (max-width: 1070px) {
   .footer{
+    padding-top: 50px;
     flex-direction: column;
     align-items: baseline;
   }
