--- a/src/components/Main/feedback/Feedback.module.scss
+++ b/src/components/Main/feedback/Feedback.module.scss
@@ -127,6 +127,10 @@
 }
 
 @media screen  and (max-width: 576px){
+  .socialItem{
+    flex-direction: column;
+    align-items: flex-start;
+  }
   .social{
     align-items: flex-start;
   }
