--- a/src/components/Main/servicesAndPrices/ServicesAndPrices.module.scss
+++ b/src/components/Main/servicesAndPrices/ServicesAndPrices.module.scss
@@ -9,6 +9,8 @@
   flex-direction: column;
   gap: 38px;
   overflow-x: hidden;
+    padding-top: 54px;
+// background:url('./')
 }
 
 .content{
@@ -17,6 +19,7 @@
   justify-content: center;
   flex-wrap: wrap;
   gap:20px;
+  padding-bottom: 47px;
 }
 
 
