--- a/src/components/UI/inputs/inputs.module.scss
+++ b/src/components/UI/inputs/inputs.module.scss
@@ -13,8 +13,12 @@
   padding: 18px;
   color: var(--gray-title);
   border-radius: 5px;
+  margin-bottom: 17px;
 }
+// .input:nth-child(1){
+//     margin-bottom: 10px;
 
+// }
 .label{
   font-style: normal;
   font-weight: 400;
