--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
   display: none;
 }
 
+
 .headerDesktop {
   display: block;
 }
@@ -10,7 +11,9 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: fixed;
+  z-index: 999;
+  top:0;
 }
 
 .gray {
@@ -47,6 +50,9 @@
   flex-direction: row;
   gap: 15px;
   align-items: center;
+  img{
+    // margin-right: 10px;
+  }
 }
 
 
