--- a/src/components/Main/Check/Check.module.scss
+++ b/src/components/Main/Check/Check.module.scss
@@ -20,7 +20,7 @@
   z-index: -1;
   margin: auto;
   position: absolute;
-  top: 0;
+  // top: 190px;
   left: 0;
   bottom: 0;
   right: 0;
@@ -34,6 +34,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  
 }
 
 .content {
