--- a/src/components/Main/problems/Problems.module.scss
+++ b/src/components/Main/problems/Problems.module.scss
@@ -6,10 +6,29 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  // background:url('./pink.jpg') left,url('./pink.jpg') right;
   position: relative;
   z-index: 5;
+  padding-bottom: 170px;
+  
 }
-
+.svgTop{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.pink{
+  position: absolute;
+  left: 0;
+}
+.blue{
+  position: absolute;
+  right: 0%;
+}
+.problems{
+  // background:background: #FAF6F3,
+// filter: blur(170px)
+}
 .content{
   display: flex;
   flex-direction: column;
@@ -73,6 +92,10 @@
   .men{
     position: static;
     margin: 0;
+        position: relative;
+    // top: 100px;
+    left: 50%;
+    transform: translateX(-50%) translateY(25%);
   }
   .content{
    gap: 20px;
