--- a/src/components/Main/promo/Promo.module.scss
+++ b/src/components/Main/promo/Promo.module.scss
@@ -1,8 +1,10 @@
-.main{
+.main {
   position: relative;
   overflow-x: hidden;
+  padding-top: 124px;
+  overflow: hidden;
 }
-.bcgImage{
+.bcgImage {
   position: absolute;
   top: 0;
   left: 0;
@@ -12,41 +14,54 @@
   height: 100%;
 }
 
-.wrapper{
+.wrapper {
   margin: 0 auto;
   max-width: 1410px;
   padding: 0 15px;
   width: 100%;
   display: flex;
   flex-direction: row;
+  margin-bottom: 100px;
 }
 
-.pluses{
+.pluses {
   margin-right: 40px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: -1px 4px 21px rgba(0, 0, 0, 0.1);
   border-radius: 11px;
   display: flex;
   flex-direction: column;
-  gap:33px;
-  padding:16px;
+  gap: 33px;
+  padding: 16px;
   max-width: 213px;
   margin-bottom: 30px;
+  // margin-top: 20px;
 }
-
-.plus{
- display: flex;
-  flex-direction: column;
+.plus:nth-child(1) img{
+  padding: 7px;
+}
+.plus {
+  display: flex;
+  // flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
-.title{
+.plus img{
+  margin-right: 16px;
+  width: 70px;
+height: 78px;
+object-fit: scale-down;
+}
+.title {
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 113.7%;
   color: var(--gray-primary);
 }
-.text{
+.text {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -55,11 +70,12 @@
   color: var(--gray-secondary);
 }
 
-.mainTitleBlock{
+.mainTitleBlock {
+  z-index: 20;
   max-width: 556px;
   width: 100%;
 }
-.mainTitle{
+.mainTitle {
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
@@ -68,7 +84,7 @@
   margin-bottom: 16px;
 }
 
-.orange{
+.orange {
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -76,7 +92,7 @@
   color: var(--orange);
 }
 
-.bold{
+.bold {
   font-style: normal;
   font-weight: 900;
   font-size: 40px;
@@ -84,16 +100,16 @@
   color: black;
 }
 
-.mb32{
+.mb32 {
   margin-bottom: 32px;
 }
 
-.mw406{
+.mw406 {
   max-width: 406px;
   width: 100%;
 }
 
-.moneyBlock{
+.moneyBlock {
   max-width: 311px;
   width: 100%;
   display: flex;
@@ -101,7 +117,7 @@
   align-items: center;
   gap: 11px;
   padding: 3px 14px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: -1px 4px 21px rgba(0, 0, 0, 0.1);
   border-radius: 11px;
   margin-bottom: 64px;
@@ -115,15 +131,23 @@
   }
 }
 
-
-.people{
-  margin-left: auto;
+.clouds {
+  position: absolute;
   object-fit: cover;
-  height: 590px;
+  width: 100%;
+  height: 50%;
+  bottom: -30%;
+}
+.people {
+  margin-left: auto;
+  // object-fit: cover;
+  z-index: -1;
+  // height: 590px;
+  position: relative;
+  bottom: 0;
 }
 
-
-.cloud{
+.cloud {
   //overflow-x: hidden;
   position: relative;
   z-index: 0;
@@ -131,7 +155,7 @@
   display: flex;
   flex-direction: row;
   height: 200px;
-  img{
+  img {
     max-width: 500px;
     max-height: 250px;
     overflow-x: hidden;
@@ -140,7 +164,8 @@
   }
 }
 
-.button{
+.button {
+  z-index: 20;
   background: inherit;
   padding: 0;
   border: none;
@@ -148,49 +173,61 @@
   color: inherit;
   background-color: transparent;
 }
-.plusesDesktop{
+.plusesDesktop {
   display: block;
+  z-index: 5;
 }
 
-.plusesMobile{
+.plusesMobile {
   display: none;
+
 }
 
 @media screen and (max-width: 768px) {
-  .bcgImage{
+  .bcgImage {
     object-fit: none;
   }
-  .wrapper{
+  .text{
+    text-align: left;
+  }
+  .wrapper {
     flex-direction: column;
   }
-  .plusesDesktop{
+  .mainTitle,.orange,.bold {
+    font-size: 23px;
+    line-height: 125%;
+  }
+  .main{
+    padding-top: 30px;
+  }
+  .plusesDesktop {
     display: none;
   }
 
-  .plusesMobile{
+  .plusesMobile {
     display: block;
     padding: 0 15px;
-    margin-top: -100px;
+    // margin-top: -100px;
     z-index: 100;
     margin-bottom: 90px;
   }
-  .moneyBlock{
+  .moneyBlock {
     margin-bottom: 0;
   }
-  .button{
-    >img{
+  .button {
+    > img {
       width: 300px;
     }
-
   }
-  .people{
+  .people {
     height: 300px;
   }
-  .pluses{
+  .pluses {
     max-width: 100%;
     margin: 0;
   }
-  .cloud{
+  .clouds,
+  .cloud {
     z-index: -1;
   }
 }
