--- a/src/components/Main/selection/Selection.module.scss
+++ b/src/components/Main/selection/Selection.module.scss
@@ -9,8 +9,8 @@
   top: 0;
   right: 0;
   //margin-right: -150px;
-  height: 300px;
-  z-index: 2;
+  // height: 300px;
+  z-index: -1;
 
 }
 .trees{
@@ -18,7 +18,7 @@
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
-  left: 0;
+  left: -7%;
   height: 300px;
 }
 
@@ -56,13 +56,24 @@
 @media screen and (max-width: 1700px){
   .trees{
     bottom: 0;
-    top:initial;
-    height: 200px;
+    // top:initial;
+    // height: 200px;
     transform: translateY(40%);
     margin-left: -40px;
+    z-index: -1;
   }
 }
 
+@media screen and (max-width: 1400px){
+  .trees{
+    bottom: 0;
+    // top:initial;
+    height: 200px;
+    // transform: translateY(40%);
+    // margin-left: -40px;
+    // z-index: -1;
+  }
+}
 @media screen and (max-width: 768px){
   .cardContainer{
     column-gap: 0;
@@ -70,6 +81,8 @@
 
   .carAndTrees{
     transform:translateY(-20%);
+      height: 300px;
+
   }
 
 }
