--- a/src/components/UI/Forms/Form.module.scss
+++ b/src/components/UI/Forms/Form.module.scss
@@ -33,6 +33,10 @@
 }
 
 .form{
+  input::placeholder{
+    color: rgba(18, 18, 18, 1);
+
+  }
   display: flex;
   flex-direction: column;
   gap: 35px;
@@ -56,7 +60,7 @@
 .btn{
   min-height: 60px;
   font-style: normal;
-  font-weight: 600!important;
+  font-weight: 700!important;
   font-size: 18px;
   line-height: 140%;
   /* or 25px */
@@ -90,6 +94,7 @@
   >div{
     width: 100%;
   }
+  // margin-bottom: 10px;
 }
 
 .formWrapper{
