--- a/src/components/cards/blogCard/BlogCard.module.scss
+++ b/src/components/cards/blogCard/BlogCard.module.scss
@@ -75,8 +75,8 @@
   box-shadow: -1px 4px 21px rgba(0, 0, 0, 0.1);
   border-radius: 11px 11px 11px 0px;
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: -1px;
+  bottom: -1px;
   padding: 10px 40px;
 }
 
