--- a/src/override.css
+++ b/src/override.css
@@ -2,13 +2,21 @@
     border-color: inherit;
     box-shadow: inherit;
 }
-
+/* <style> */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+/* </style> */
 .accordion-button:not(.collapsed) {
     color: inherit;
     background: inherit;
     box-shadow: inset 0 -1px 0 rgba(0,0,0,.125);
 }
-
+p,span,h3,h2{
+    font-family: 'Montserrat';
+}
+input{
+    border:none;
+}
 
 button:focus:not(:focus-visible){
     outline:inherit ;
@@ -71,16 +79,20 @@ button:focus:not(:focus-visible){
 }
 .rc-pagination-item:hover{
     border: inherit;
-    background: black;
+      background: linear-gradient(109.36deg, #000000 0%, #282828 100%) !important;
+
     color: white;
 }
 
 .rc-pagination-item-active{
     border-color: none;
-    background: black;
+      background: linear-gradient(109.36deg, #000000 0%, #282828 100%) !important;
+
     color: white;
 }
-
+.rc-pagination-jump-prev button:after, .rc-pagination-jump-next button:after{
+    color:white;
+}
 .modal-backdrop.show{
     opacity: 0.7;
 }
