--- a/src/pages/404/NotFound.module.scss
+++ b/src/pages/404/NotFound.module.scss
@@ -3,8 +3,8 @@
 }
 
 .img{
-  //min-width: 100%;
-  //min-height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   width: 100%;
   //height: 100%;
   min-height: 100vh;
@@ -35,4 +35,5 @@
   background: #FFFFFF;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
+  border:none;
 }
