--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -16,6 +16,7 @@
 }
 
 .orangeSquare{
+  object-fit: contain;
   z-index: -1;
   position: absolute;
   top: 0;
@@ -45,6 +46,7 @@
     overflow-x: hidden;
   }
   .orangeSquare{
+    
     display: none;
   }
 }
