--- a/src/components/Main/Examples/Examples.module.scss
+++ b/src/components/Main/Examples/Examples.module.scss
@@ -7,7 +7,11 @@
   flex-direction: column;
   gap: 38px;
 }
+@media (max-width:500px) {
+  .rc-pagination-prev, .rc-pagination-next {
 
+  }
+}
 .content{
   display: flex;
   flex-direction: row;
