--- a/src/components/UI/pagination/Pagination.module.scss
+++ b/src/components/UI/pagination/Pagination.module.scss
@@ -1,14 +1,22 @@
-.wrapper{
+.wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.rc-pagination-item-active,.rc-pagination-item-active{
+.rc-pagination-item-active,
+.rc-pagination-item-active {
   background: linear-gradient(109.36deg, #000000 0%, #282828 100%) !important;
 }
 
-@media screen and (max-width: 768px){
-  .wrapper{
+@media screen and (max-width: 768px) {
+  .wrapper {
     max-width: 100%;
+  }
+  .wrapper .rc-pagination {
+    align-items: end;
+  }
+  svg {
+    width: 100%;
+    height: 100%;
   }
 }
