--- a/src/components/blogArticles/BlogArticles.module.scss
+++ b/src/components/blogArticles/BlogArticles.module.scss
@@ -12,7 +12,7 @@
 .container{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   row-gap:20px;
   flex-wrap: wrap;
   margin: 0 auto;
