--- a/src/override.css
+++ b/src/override.css
@@ -138,6 +138,8 @@ button:focus:not(:focus-visible){
   } */
  .rc-pagination {
     align-items: end;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
 }
