fix some problems

--- a/src/components/blogMain/BlogMain.module.scss
+++ b/src/components/blogMain/BlogMain.module.scss
@@ -16,7 +16,7 @@
   // display: none;
   z-index: 1;
   position: absolute;
-  bottom: -10%;
+  bottom: -100px;
   // margin-left: 79%;
   right: 0;
   // bottom: 0;
