--- a/src/components/Main/promo/Promo.module.scss
+++ b/src/components/Main/promo/Promo.module.scss
@@ -66,7 +66,7 @@ object-fit: scale-down;
   font-weight: 400;
   font-size: 14px;
   line-height: 125%;
-  text-align: center;
+  text-align: left;
   color: var(--gray-secondary);
 }
 
